--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <label id="countDown" class="countDown">5</label>
 
-        <img id="backImage" src="img/menu.jpg" />
+        <img id="backImage" src="img/background1.jpg" />
 
 
         <img id="movementImage" src="" />
