Extract common game elements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="js/resemblejs/resemble.js"></script>
         <script src="js/kamfu-camera.js"></script>
+        <script src="js/kamfu-game-common.js"></script>
         <script src="js/kamfu-game-menu.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/kamfu.css" />
