First ninja game playable demo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <video id="video1" autoplay ></video>
         </div>
 
+        <div class="graphicsContainer">
+            <canvas id="gameBack" height="720" width="1280"></canvas>
+        </div>
 
         <div class="graphicsContainer">
             <canvas id="gameFront" height="720" width="1280"></canvas>
