--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <img id="ninjaWhite" class="invisible" src="img/ninja_white.png" />
         <img id="ninjaExplosion" class="invisible" src="img/explosion.png" />
 
+        <img id="danceForeground" class="invisible" src="img/dance_foreground.png" />
+
 
         <img id="movementImage" src="" />
 
