--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 
         <img id="danceForeground" class="invisible" src="img/dance_foreground.png" />
 
+        <img id="simonForeground" class="invisible" src="img/simon_foreground.png" />
+        <img id="buttonYellow" class="invisible" src="img/button_yellow.png" />
+        <img id="buttonBlue" class="invisible" src="img/button_blue.png" />
+        <img id="buttonRed" class="invisible" src="img/button_red.png" />
+        <img id="buttonGreen" class="invisible" src="img/button_green.png" />
+
 
         <img id="movementImage" src="" />
 
