--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <img id="buttonBlue" class="invisible" src="img/button_blue.png" />
         <img id="buttonRed" class="invisible" src="img/button_red.png" />
         <img id="buttonGreen" class="invisible" src="img/button_green.png" />
+        <img id="buttonYellowBig" class="invisible" src="img/button_yellow_big.png" />
+        <img id="buttonBlueBig" class="invisible" src="img/button_blue_big.png" />
+        <img id="buttonRedBig" class="invisible" src="img/button_red_big.png" />
+        <img id="buttonGreenBig" class="invisible" src="img/button_green_big.png" />
 
 
         <audio id="music" src="" loop="true"></audio>
