--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
         <img id="ninjaWhite" class="invisible" src="img/ninja_white.png" />
         <img id="ninjaExplosion" class="invisible" src="img/explosion.png" />
 
-        <img id="danceForeground" class="invisible" src="img/dance_foreground.png" />
-
         <img id="simonForeground" class="invisible" src="img/simon_foreground.png" />
         <img id="buttonYellow" class="invisible" src="img/button_yellow.png" />
         <img id="buttonBlue" class="invisible" src="img/button_blue.png" />
@@ -62,6 +60,22 @@
         <img id="buttonBlueBig" class="invisible" src="img/button_blue_big.png" />
         <img id="buttonRedBig" class="invisible" src="img/button_red_big.png" />
         <img id="buttonGreenBig" class="invisible" src="img/button_green_big.png" />
+
+
+        <img id="danceForeground" class="invisible" src="img/dance_foreground.png" />
+        <img id="hand1Black" class="invisible" src="img/hand1_black.png" />
+        <img id="hand1Success" class="invisible" src="img/hand1_success.png" />
+        <img id="hand1Color" class="invisible" src="img/hand1_color.png" />
+        <img id="hand2Black" class="invisible" src="img/hand2_black.png" />
+        <img id="hand2Success" class="invisible" src="img/hand2_success.png" />
+        <img id="hand2Color" class="invisible" src="img/hand2_color.png" />
+        <img id="hand3Black" class="invisible" src="img/hand3_black.png" />
+        <img id="hand3Success" class="invisible" src="img/hand3_success.png" />
+        <img id="hand3Color" class="invisible" src="img/hand3_color.png" />
+        <img id="hand4Black" class="invisible" src="img/hand4_black.png" />
+        <img id="hand4Success" class="invisible" src="img/hand4_success.png" />
+        <img id="hand4Color" class="invisible" src="img/hand4_color.png" />
+
 
 
         <audio id="music" src="" loop="true"></audio>
