--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
         <img id="hand4Success" class="invisible" src="img/hand4_success.png" />
         <img id="hand4Color" class="invisible" src="img/hand4_color.png" />
 
+        <img id="song1" class="invisible" src="img/song1.jpg" />
+        <img id="song2" class="invisible" src="img/song2.jpg" />
+
 
 
         <audio id="music" src="" loop="true"></audio>
         <audio id="effect" src="" ></audio>
-        <!--
+<!--
         <br />
         <br />
         <br />
@@ -154,6 +157,6 @@
         <br />
         <br />
         <input type="text" id="debugText" />
-        -->
+-->
     </body>
 </html>
