--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <img id="danceInactive" class="invisible" src="img/dance2.png" />
         <img id="simonActive" class="invisible" src="img/simon1.png" />
         <img id="simonInactive" class="invisible" src="img/simon2.png" />
+        <img id="changeUserActive" class="invisible" src="img/changeUser1.png" />
+        <img id="changeUserInactive" class="invisible" src="img/changeUser2.png" />
 
         <img id="ninjaForeground" class="invisible" src="img/ninja_foreground.png" />
 
